--- a/web/index.html
+++ b/web/index.html
@@ -22,8 +22,8 @@
                     <li><a href="#">Problems</a></li>
                     <li><a href="#">Forum</a></li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                <ul class="nav navbar-nav navbar-right ">
+                    <li><a href="#" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
                 <form class="navbar-form navbar-right">
                     <div class="input-group">
@@ -45,26 +45,32 @@
                 </center>
                 <form class="form-horizontal">
                     <div class="form-group">
-                        <label class="control-label col-sm-5" for="email"></label>
-                        <div class="col-xs-2">
-                            <input type="email" class="form-control" id="email" placeholder="Enter email">
+                        <label class="control-label col-sm-4" for="name"></label>
+                        <div class="col-xs-3">
+                            <input type="text" class="form-control" id="name" placeholder="First name and Last name">
                         </div>
                     </div><br>
                     <div class="form-group">
-                        <label class="control-label col-sm-5" for="pwd"></label>
-                        <div class="col-xs-2"> 
-                            <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+                        <label class="control-label col-sm-4" for="email"></label>
+                        <div class="col-xs-3">
+                            <input type="email" class="form-control" id="email" placeholder="Email">
                         </div>
                     </div><br>
-                    <div class="form-group"> 
-                        <div class="col-sm-offset-5 col-sm-10">
+                    <div class="form-group">
+                        <label class="control-label col-sm-4" for="pwd"></label>
+                        <div class="col-xs-3"> 
+                            <input type="password" class="form-control" id="pwd" placeholder="Password">
+                        </div>
+                    </div><br>
+                    <!--<div class="form-group"> 
+                        <div class="col-sm-offset-4 col-sm-10">
                             <div class="checkbox">
                                 <label><input type="checkbox"> Remember me</label>
                             </div>
                         </div>
-                    </div><br>
+                    </div><br>-->
                     <div class="form-group"> 
-                        <div class="col-sm-offset-5 col-sm-10">
+                        <div class="col-sm-offset-4 col-sm-10">
                             <div class="subButton">
                                 <button type="submit" class="btn btn-default">Submit</button>
                             </div>
@@ -79,6 +85,24 @@
         </div>
         <div class="jumbotron">
             <div class="footer">
+            </div>
+        </div>
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Modal Header</h4>
+                    </div>
+                    <div class="modal-body">
+                    <p>Some text in the modal.</p>
+                    </div>
+                    <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
