--- a/web/index.html
+++ b/web/index.html
@@ -72,7 +72,9 @@
                     <div class="form-group"> 
                         <div class="col-sm-offset-4 col-sm-10">
                             <div class="subButton">
-                                <button type="submit" class="btn btn-default">Submit</button>
+                                <div class="col-xs-3">
+                                    <button type="submit" class="btn btn-primary btn-block">Register and Start Coding!</button>
+                                </div>
                             </div>
                         </div>
                     </div>
