Added navbar files
Added the following new files:
1. forum.html
2. howtostart.html
3. problems.html
4. theory.html
5. forumMain.css
6. howtostartMain.css
7. problemsMain.css
8. theoryMain.css

--- a/web/howtostart.html
+++ b/web/howtostart.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>ALGranth</title>
+        <title>ALGranth|How To Start</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="howtostartMain.css">
     </head>
     <body>
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -17,7 +17,7 @@
                 </div>
                 <ul class="nav navbar-nav">
                     <!--<li class="active"><a href="#">Home</a></li>-->
-                    <li><a href="howtostart.html">How To Start</a></li>
+                    <li class="active"><a href="howtostart.html">How To Start</a></li>
                     <li><a href="theory.html">Theory</a></li>
                     <li><a href="problems.html">Problems</a></li>
                     <li><a href="forum.html">Forum</a></li>
@@ -37,58 +37,6 @@
                 </form>
             </div>
         </nav>
-        <div class="jumbotron">
-            <div class="register">
-                <center>
-                    <h3>Register</h3>
-                    <br>
-                </center>
-                <form class="form-horizontal">
-                    <div class="form-group">
-                        <label class="control-label col-sm-4" for="name"></label>
-                        <div class="col-xs-3">
-                            <input type="text" class="form-control" id="name" placeholder="First name and Last name">
-                        </div>
-                    </div><br>
-                    <div class="form-group">
-                        <label class="control-label col-sm-4" for="email"></label>
-                        <div class="col-xs-3">
-                            <input type="email" class="form-control" id="email" placeholder="Email">
-                        </div>
-                    </div><br>
-                    <div class="form-group">
-                        <label class="control-label col-sm-4" for="pwd"></label>
-                        <div class="col-xs-3"> 
-                            <input type="password" class="form-control" id="pwd" placeholder="Password">
-                        </div>
-                    </div><br>
-                    <!--<div class="form-group"> 
-                        <div class="col-sm-offset-4 col-sm-10">
-                            <div class="checkbox">
-                                <label><input type="checkbox"> Remember me</label>
-                            </div>
-                        </div>
-                    </div><br>-->
-                    <div class="form-group"> 
-                        <div class="col-sm-offset-4 col-sm-10">
-                            <div class="subButton">
-                                <div class="col-xs-3">
-                                    <button type="submit" class="btn btn-primary btn-block">Register and Start Coding!</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="jumbotron">
-            <div class="quotes">
-            </div>
-        </div>
-        <div class="jumbotron">
-            <div class="footer">
-            </div>
-        </div>
         <!-- Modal -->
         <div class="modal fade" id="myModal" role="dialog">
             <div class="modal-dialog">
