--- a/web/index.html
+++ b/web/index.html
@@ -91,21 +91,42 @@
         </div>
         <!-- Modal -->
         <div class="modal fade" id="myModal" role="dialog">
-            <div class="modal-dialog">
-                <!-- Modal content-->
-                <div class="modal-content">
-                    <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Modal Header</h4>
-                    </div>
-                    <div class="modal-body">
-                    <p>Some text in the modal.</p>
-                    </div>
-                    <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+    		<div class="modal-dialog">
+        		<div class="modal-content">
+        			<div class="modal-header">
+          			<button type="button" class="close" data-dismiss="modal">&times;</button>
+            		<h4 class="modal-title">Modal Header</h4>
+        			</div>
+        			<div class="modal-body">
+           			<form class="form-horizontal">
+    					<div class="form-group">    					
+    						<div class="col-sm-6">
+      						<input type="email" class="form-control" id="email" placeholder="Email">
+    						</div><br>
+  						</div>
+  						<div class="form-group">  					
+    						<div class="col-sm-6"> 
+      						<input type="password" class="form-control" id="pwd" placeholder="Password">
+    						</div><br>
+  						</div>
+  						<div class="form-group"> 
+    						<div class="col-sm-offset-2 col-sm-10">
+      							<div class="checkbox">
+        						<label><input type="checkbox">Remember me</label>
+      							</div>
+    						</div>
+  						</div>
+  						<div class="form-group"> 
+   							<div class="col-sm-offset-2 col-sm-10">
+      						<button type="submit" class="btn btn-default">Submit</button>
+    						</div>
+  						</div>
+        			</div>
+        			<div class="modal-footer">
+            		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        			</div>
+        		</div>     
+          	</div>
+  		</div>
     </body>
 </html>
